Finalize Prototype Notes.js

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<h1>Miqdad</h1>
+		<h1>Hello World</h1>
 		<script src="Prototypes/Prototype Notes.js"></script>
 	</body>
 </html>
