Updates on Prototypes and Prototypical Inheritance

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 	</head>
 	<body>
 		<h1>Hello World</h1>
-		<script src="Prototypes/Prototype Notes.js"></script>
+		<script src="Prototypical Inheritance/Inheritance Notes.js"></script>
 	</body>
 </html>
