--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 	</head>
 	<body>
 		<h1>Hello World</h1>
-		<script src="Prototypical Inheritance/polymorphism.js"></script>
+		<script src="ES6 Classes /Class Notes.js"></script>
 	</body>
 </html>
